VPC.yaml
Description: "Tiered Storage with S3 File Gateway, this template MUST be used in us-east-1"
Parameters:
  KeyPairName:
    Description: KeyPair for Instances
    Type: AWS::EC2::KeyPair::KeyName
  UbuntuAMI:
    Description: AMI For Ubuntu
    Type: String
    Default: "ami-03a2cbdcd9e7d1955"
Resources:
  OnpremVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/24
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: onprem-vpc
  OnpremIGW:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
      - Key: Name
        Value: IGW-ONPREM
  OnpremIGWAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref OnpremVPC
      InternetGatewayId: !Ref OnpremIGW
  OnpremSNPrivate:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref OnpremVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.0.0.0/25
      Tags:
        - Key: Name
          Value: sn-onprem-private
  OnpremSNPublic:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref OnpremVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.0.0.128/25
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: sn-onprem-public
  OnpremRTPublic:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref OnpremVPC
      Tags:
      - Key: Name
        Value: ONPREM-RT-PUBLIC
  OnpremRTPublicAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref OnpremSNPublic
      RouteTableId:
        Ref: OnpremRTPublic
  OnpremRTPrivate:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref OnpremVPC
      Tags:
      - Key: Name
        Value: ONPREM-RT-PRIVATE
  OnpremRTPrivateAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref OnpremSNPrivate
      RouteTableId:
        Ref: OnpremRTPrivate
  OnpremRouteDefaultPublic:
    Type: 'AWS::EC2::Route'
    DependsOn: OnpremIGWAttachment
    Properties:
      RouteTableId:
        Ref: OnpremRTPublic
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId:
        Ref: OnpremIGW
  OnpremInstanceSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref OnpremVPC
      GroupDescription: Default A4L AWS SG
      SecurityGroupIngress:
        - Description: 'Allow SSH IPv4 IN'
          IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - Description: 'Allow ALL from ONPREM Networks'
          IpProtocol: "-1"
          CidrIp: '10.0.0.0/24'
  SessionManagerRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: root
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 'ssm:DescribeAssociation'
                  - 'ssm:GetDeployablePatchSnapshotForInstance'
                  - 'ssm:GetDocument'
                  - 'ssm:DescribeDocument'
                  - 'ssm:GetManifest'
                  - 'ssm:GetParameter'
                  - 'ssm:GetParameters'
                  - 'ssm:ListAssociations'
                  - 'ssm:ListInstanceAssociations'
                  - 'ssm:PutInventory'
                  - 'ssm:PutComplianceItems'
                  - 'ssm:PutConfigurePackageResult'
                  - 'ssm:UpdateAssociationStatus'
                  - 'ssm:UpdateInstanceAssociationStatus'
                  - 'ssm:UpdateInstanceInformation'
                Resource: '*'
              - Effect: Allow
                Action:
                  - 'ssmmessages:CreateControlChannel'
                  - 'ssmmessages:CreateDataChannel'
                  - 'ssmmessages:OpenControlChannel'
                  - 'ssmmessages:OpenDataChannel'
                Resource: '*'
              - Effect: Allow
                Action:
                  - 'ec2messages:AcknowledgeMessage'
                  - 'ec2messages:DeleteMessage'
                  - 'ec2messages:FailMessage'
                  - 'ec2messages:GetEndpoint'
                  - 'ec2messages:GetMessages'
                  - 'ec2messages:SendReply'
                Resource: '*'
  SessionManagerInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref SessionManagerRole
  UBUNTU:
    DependsOn: SessionManagerInstanceProfile
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref 'UbuntuAMI'
      InstanceType: 't2.micro'
      IamInstanceProfile: 'SessionManagerInstanceProfile'
      SubnetId: !Ref 'OnpremSNPrivate'
      Tags:
        - Key: Name
          Value: 'Ubuntu'
      SecurityGroupIds:
        - !Ref OnpremInstanceSG
      KeyName: !Ref 'KeyPairName'
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          sudo snap install amazon-ssm-agent --classic
          sudo snap start amazon-ssm-agent
